=== master

* Fix placeholder literalizer optimization for dataset aggregate methods on a model dataset (belousovAV) (#1847, #1848)

=== 5.54.0 (2022-03-01)

* Add enum plugin for treating columns as enums in a model (jeremyevans) (#1839)

=== 5.53.0 (2022-02-01)

* Make Dataset#_sql_comment private when using the Database sql_comments extension (jeremyevans)

* Fix prepared statements in the mysql2 adapter to reuse native prepared statements (jeremyevans) (#1832)

* Support H2 version 2+ in the jdbc/h2 adapter (jeremyevans) (#1817)

* Work around active_support breaking subclasses plugin on Ruby <3.1 (jeremyevans) (#1816)

* Fix error handling if trying to setup column_encryption plugin without keys (jeremyevans) (#1815)

=== 5.52.0 (2022-01-01)

* Use Class#subclasses if available in the subclasses plugin, instead of a custom Model.subclasses accessor (jeremyevans)

* Add Model.descendants and .freeze_descendants to subclasses plugin (jeremyevans)

* Avoid use of deprecated Refinement#include on Ruby 3.1+ (jeremyevans)

* Add date_parse_input_handler extension for custom handling of input to date parsing methods (jeremyevans)

* Make postgres adapter respect Database#default_string_column_size (jeremyevans)

* Make pg_interval extension work with ActiveSupport 7.0 (jeremyevans)

* Make :ruby_default schema entry for type: :datetime respect Sequel.datetime_class (jeremyevans)

* Make alter_table drop_constraint have an effect on MySQL 8.0.19+ (jeremyevans)

* Make mysql adapter support ruby-mysql 3 API (jeremyevans) (#1795)

* Make mysql adapter no longer use connection's server_version, since it isn't accurate when using the ruby-mysql driver (jeremyevans)

* Add sql_comments plugin for automatically including comments on queries generated by model class, instance, and dataset methods (jeremyevans)

* Make sql_comments Database extension support Database#with_comments, for automatically including comments for queries executed inside the block (jeremyevans)
